fix abstracts on mobile

--- a/src/styles/components/_abstracts.scss
+++ b/src/styles/components/_abstracts.scss
@@ -11,10 +11,16 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      background-attachment: fixed;
-      height: 100%;
-      width: 100%;
+      background-attachment: scroll;
+      position: fixed;
+      display: block;
       top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: translateZ(0);
+      will-change: transform;
+      z-index: 1;
     }
     &:first-of-type {
       left: 0;
