--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -424,10 +424,16 @@ table {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed;
-  height: 100%;
-  width: 100%;
+  background-attachment: scroll;
+  position: fixed;
+  display: block;
   top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateZ(0);
+  will-change: transform;
+  z-index: 1;
 }
 .abstracts__abstract:first-of-type {
   left: 0;
